<resources>
    <string name="app_name">HHGame</string>
    <string name="start_game">Начать новую игру</string>
    <string name="game_rules">Правила игры</string>
    <string name="player_parameters">Задайте параметры игрока</string>
    <string name="bug_parameters">Задайте параметры монстра</string>
    <string name="attack_parameter">Атака (от 1 до 20)</string>
    <string name="protection_parameter">Защита (от 1 до 20)</string>
    <string name="health_parameter">Здоровье (от 30 до 100)</string>
    <string name="min_damage">Минимальный урон (от 1 до 3)</string>
    <string name="max_damage">Максимальный урон (от 4 до 7)</string>
    <string name="health">HP: </string>
    <string name="throw_dice">Бросить кубик(и)</string>
    <string name="attack">Атака: %1$s</string>
    <string name="protection">Защита: %1$s</string>
    <string name="damage">Урон: %1$s-%2$s</string>
    <string name="attack_modifier">Модификатор \nатаки: %1$s</string>
    <string name="apply">Применить</string>
    <string name="main_menu">Вернуться в главное меню</string>
    <string name="player_create">Создать персонажа</string>
    <string name="monster_create">Создать монстра</string>
    <string name="edit_text_parameters_error">Недопустимое значение</string>
    <string name="prompt">Создайте персонажа и монстра, чтобы начать игру</string>
    <string name="special_skill_title">Особое умение:</string>
    <string name="victory_result">Победа! Вы с легкостью устранили имеющуюся проблему и заработали уважение коллег и заказчика.</string>
    <string name="defeat_result">К сожалению, вы проиграли. Вам не хватило знаний, чтобы пофиксить баг самостоятельно. Но, обратившись за советом к тимлиду команды андроид разработки, вы все же смогли устранить проблему на следующий день!</string>
    <string name="special_skill">\u2022 Выпить чашечку кофе \n +50% от максимального ХП \n\nЗначение здоровья не может превышать начального значения</string>
    <string name="bug_description">Этот баг хорошо спрятался в коде мобильного приложения, но QA-специалистам удалось отследить моменты его появления. Пришло время устранить его раз и навсегда.</string>
    <string name="player_description">Вам предстоит играть за программиста студии разработки Heads and Hands. Каждый день он борется с серьезными противниками - багами. Удастся ли вам победить и отстоять репутацию компании?</string>
    <string name="bug_parameters_title">Характеристики\nбага</string>
    <string name="player_parameters_title">Характеристики\nигрока</string>
    <string name="action_result">Результаты хода:</string>
    <string name="caps_left">Осталось:</string>
    <string name="cap_bonus">+50% от max HP</string>
    <string name="player_roll">Ваш бросок: </string>
    <string name="lucky">Успех</string>
    <string name="failure">Неудача</string>
    <string name="monster_roll">Бросок противника:</string>
    <string name="game_rules_text">Условия: \n\n1) В игре есть Существа. К ним относятся Игрок и Монстры.\n\n2) У Существа есть параметры Атака и Защита. Это целые числа от 1 до 20.\n\n3) У Существа есть Здоровье. Это целое число от 30 до 100 (здесь специально установлено дополнительное ограничение, чтобы игра не была слишком длинной или слишком короткой, если ввести значение здоровья близкое к нулю, но, фактически, требования соблюдены, и любое число из промежутка 30..100 будет лежать в диапазоне от 0 до N. Если Здоровье становится равным 0, то Существо умирает. Игрок может себя исцелить до 3-х раз на 50% от максимального Здоровья, но если здоровье получается больше начального, то устанаваливается максимальное (начальное) значение здоровья.\n\n4) У Существа есть параметр Урон. Это диапазон целых чисел. Пользователь должен установить минимальное значение урона в пределах 1-3 и макисмальное значение урона в пределах 4-7. И уже из этих введенных значений формируется диапазон M-N.\n\n5) Одно Существо может ударить другое по такому алгоритму:
  \n- Рассчитываем Модификатор атаки. Он равен разности Атаки атакующего и Защиты защищающегося плюс 1
  \n- Успех определяется броском N кубиков с цифрами от 1 до 6, где N - это Модификатор атаки. Всегда бросается хотя бы один кубик.
    \n- Удар считается успешным, если хотя бы на одном из кубиков выпадает 5 или 6
  \n- Если удар успешен, то берется произвольное значение из параметра Урон атакующего и вычитается из Здоровья защищающегося.
\n\n6) Для того чтобы начать игру, необходимо задать параметры персонажа и монстра. Тогда кнопка "Начать новую игру" станет доступна. В случае успеха создания существа система оповестит вас сменой цвета галочки напротив кнопки создания выбранного существа. \n\n
    </string>
    <string name="default_damage_value">0</string>
</resources>