<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/hh_color"
            app:navigationIcon="@drawable/arrow_back">

            <TextView
                android:id="@+id/tv_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_M"
                android:layout_marginBottom="@dimen/margin_M"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_M"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_XL"
                app:srcCompat="@drawable/player" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_M"
                android:text="@string/player_description"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/skill_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_M"
                android:text="@string/special_skill_title"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_view_skill"
                    android:layout_width="@dimen/image_size_medium"
                    android:layout_height="@dimen/image_size_medium"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_M"
                    app:srcCompat="@drawable/java_emblem" />

                <TextView
                    android:id="@+id/skill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/special_skill"
                    android:textColor="@color/green"
                    android:textSize="@dimen/medium_text_size" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/attack_input_layout"
                style="@style/Widget.HHGame.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_M"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/attack_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/attack_parameter"
                    android:inputType="number"
                    android:maxLength="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/protection_input_layout"
                style="@style/Widget.HHGame.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_M"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/attack_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/protection_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/protection_parameter"
                    android:inputType="number"
                    android:maxLength="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/health_input_layout"
                style="@style/Widget.HHGame.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_M"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/health_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/health_parameter"
                    android:inputType="number"
                    android:maxLength="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/min_damage_input_layout"
                style="@style/Widget.HHGame.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_M"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/min_damage_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/min_damage"
                    android:inputType="number"
                    android:maxLength="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/max_damage_input_layout"
                style="@style/Widget.HHGame.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_M"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/max_damage_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/max_damage"
                    android:inputType="number"
                    android:maxLength="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_player_button"
                style="@style/Widget.HHGame.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size"
                android:layout_marginTop="@dimen/margin_M"
                android:layout_marginBottom="@dimen/margin_M"
                android:background="@color/hh_color"
                android:enabled="false"
                android:text="@string/apply" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>