<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_M"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_XL"
                app:srcCompat="@drawable/hh_logo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_XL"
                android:gravity="center"
                android:text="@string/prompt"
                android:textAlignment="gravity"
                android:textSize="@dimen/medium_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size"
                android:layout_marginTop="@dimen/margin_M"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_player_button"
                    style="@style/Widget.HHGame.Button.Primary"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_M"
                    android:layout_marginEnd="@dimen/margin_M"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:layout_weight="1"
                    android:background="@color/hh_color"
                    android:text="@string/player_create" />

                <ImageView
                    android:id="@+id/image_check_player_parameters"
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_check_mark_default" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size"
                android:layout_marginTop="@dimen/margin_M"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_monster_button"
                    style="@style/Widget.HHGame.Button.Primary"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_M"
                    android:layout_marginEnd="@dimen/margin_M"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:layout_weight="1"
                    android:background="@color/hh_color"
                    android:text="@string/monster_create" />

                <ImageView
                    android:id="@+id/image_check_monster_parameters"
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_check_mark_default" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_game_btn"
                style="@style/Widget.HHGame.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size"
                android:layout_marginTop="@dimen/margin_M"
                android:background="@color/hh_color"
                android:enabled="false"
                android:text="@string/start_game" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/about_app_btn"
                style="@style/Widget.HHGame.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size"
                android:layout_marginTop="@dimen/margin_M"
                android:layout_marginBottom="@dimen/margin_M"
                android:background="@color/hh_color"
                android:text="@string/game_rules" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>